// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link should not output styles when __unstyled is true 1`] = `
<div>
  <a
    class="emotion-0"
    href="https://octopusthink.com/"
  >
    hello
  </a>
</div>
`;

exports[`Link should output Link styles 1`] = `
.emotion-0 {
  border-bottom: 2px solid #f5bbda;
  color: #cd2f83;
  -webkit-text-decoration: none;
  text-decoration: none;
  -webkit-transition: all 200ms ease-in-out;
  transition: all 200ms ease-in-out;
}

.emotion-0:hover {
  border-color: #a0dee3;
  color: #0097a2;
}

.emotion-0:focus {
  border-color: transparent;
  box-shadow: #f5bbda 0px 0px 0px 3px;
  outline: none;
}

<div>
  <a
    class="emotion-0"
    href="https://octopusthink.com/"
  >
    hello
  </a>
</div>
`;
